--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
     <meta name="format-detection" content="telephone=no" />
     <meta name="msapplication-tap-highlight" content="no" />
 
-    <link rel="icon" type="image/png" href="assets/icon/logo.png" />
+    <link rel="icon" type="image/png" href="assets/icon/logo1.png" />
 
     <!-- add to homescreen for ios -->
     <meta name="mobile-web-app-capable" content="yes" />
